[gd_scene load_steps=4 format=3 uid="uid://ct6vkityq225n"]

[ext_resource type="Script" path="res://scenes/decks/renderDecks.gd" id="1_iyamc"]
[ext_resource type="Script" path="res://scenes/decks/deck.gd" id="2_c4vyq"]
[ext_resource type="StyleBox" uid="uid://bhl7rmreqex31" path="res://styles/deckStyle.tres" id="3_5ghyv"]

[node name="Decks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_iyamc")

[node name="HiddenDeck" type="AspectRatioContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 30.0
offset_right = 576.0
offset_bottom = 143.0
ratio = 3.0
script = ExtResource("2_c4vyq")

[node name="Panel" type="Panel" parent="HiddenDeck"]
custom_minimum_size = Vector2(359, 113)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_5ghyv")

[node name="DeckName" type="Label" parent="HiddenDeck/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Deck Name"

[node name="Label" type="Label" parent="HiddenDeck/Panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 24.0
grow_horizontal = 0
text = "Selected"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Decks"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="decksDisplay" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[connection signal="deckNamePropagate" from="HiddenDeck" to="." method="_on_hidden_deck_deck_name_propagate"]
[connection signal="gui_input" from="HiddenDeck/Panel" to="HiddenDeck" method="_on_panel_gui_input"]
